--- a/app/views/robotics/current/agricultural-sector.html
+++ b/app/views/robotics/current/agricultural-sector.html
@@ -33,75 +33,75 @@ Agricultural sector
                
                
                
-                <div class="govuk-checkboxes">                
+                <div class="govuk-radios" data-module="govuk-radios">                
 
               
-                  <div class="govuk-checkboxes__item">
-                    <input class="govuk-checkboxes__input" id="agricultural-sector-1" name="agricultural-sector" type="checkbox" value="arable" {{ checked("agricultural-sector", "arable") }}>
-                    <label class="govuk-label govuk-checkboxes__label" for="agricultural-sector-1">
+                  <div class="govuk-radios__item">
+                    <input class="govuk-radios__input" id="agricultural-sector-1" name="agricultural-sector" type="radio" value="arable" {{ checked("agricultural-sector", "arable") }}>
+                    <label class="govuk-label govuk-radios__label" for="agricultural-sector-1">
                     Arable
                     </label>
                   </div>
 
 
                   {% if (data['farming-type'] == "Solar") %}
-                  <div class="govuk-checkboxes__item">
-                    <input class="govuk-checkboxes__input" id="agricultural-sector-1" name="agricultural-sector" type="checkbox" value="beef" {{ checked("agricultural-sector", "beef") }}>
-                    <label class="govuk-label govuk-checkboxes__label" for="agricultural-sector-1">
+                  <div class="govuk-radios__item">
+                    <input class="govuk-radios__input" id="agricultural-sector-1" name="agricultural-sector" type="radio" value="beef" {{ checked("agricultural-sector", "beef") }}>
+                    <label class="govuk-label govuk-radios__label" for="agricultural-sector-1">
                     Beef
                     </label>
                   </div>
                   {% endif %}
 
-                  <div class="govuk-checkboxes__item">
-                    <input class="govuk-checkboxes__input" id="agricultural-sector-2" name="agricultural-sector" type="checkbox" value="dairy livestock" {{ checked("agricultural-sector", "dairy livestock") }}>
-                    <label class="govuk-label govuk-checkboxes__label" for="agricultural-sector-2">
+                  <div class="govuk-radios__item">
+                    <input class="govuk-radios__input" id="agricultural-sector-2" name="agricultural-sector" type="radio" value="dairy livestock" {{ checked("agricultural-sector", "dairy livestock") }}>
+                    <label class="govuk-label govuk-radios__label" for="agricultural-sector-2">
                       Dairy livestock
                     </label>
                   </div>
 
-                  <div class="govuk-checkboxes__item">
-                    <input class="govuk-checkboxes__input" id="agricultural-sector" name="agricultural-sector" type="checkbox" value="horticulture" {{ checked("agricultural-sector", "horticulture") }}>
-                    <label class="govuk-label govuk-checkboxes__label" for="agricultural-sector">
+                  <div class="govuk-radios__item">
+                    <input class="govuk-radios__input" id="agricultural-sector" name="agricultural-sector" type="radio" value="horticulture" {{ checked("agricultural-sector", "horticulture") }}>
+                    <label class="govuk-label govuk-radios__label" for="agricultural-sector">
                       Horticulture
                     </label>
                   </div>
                
 
                   {% if (data['farming-type'] == "Solar") %}
-                  <div class="govuk-checkboxes__item">
-                    <input class="govuk-checkboxes__input" id="agricultural-sector-3" name="agricultural-sector" type="checkbox" value="mixed livestock" {{ checked("agricultural-sector", "mixed livestock") }}>
-                    <label class="govuk-label govuk-checkboxes__label" for="agricultural-sector-3">
+                  <div class="govuk-radios__item">
+                    <input class="govuk-radios__input" id="agricultural-sector-3" name="agricultural-sector" type="radio" value="mixed livestock" {{ checked("agricultural-sector", "mixed livestock") }}>
+                    <label class="govuk-label govuk-radios__label" for="agricultural-sector-3">
                       Mixed livestock
                     </label>
                   </div>    
 
-                  <div class="govuk-checkboxes__item">
-                    <input class="govuk-checkboxes__input" id="agricultural-sector-3" name="agricultural-sector" type="checkbox" value="pig" {{ checked("agricultural-sector", "pig") }}>
-                    <label class="govuk-label govuk-checkboxes__label" for="agricultural-sector-3">
+                  <div class="govuk-radios__item">
+                    <input class="govuk-radios__input" id="agricultural-sector-3" name="agricultural-sector" type="radio" value="pig" {{ checked("agricultural-sector", "pig") }}>
+                    <label class="govuk-label govuk-radios__label" for="agricultural-sector-3">
                       Pig
                     </label>
                   </div>
 
-                  <div class="govuk-checkboxes__item">
-                    <input class="govuk-checkboxes__input" id="agricultural-sector-3" name="agricultural-sector" type="checkbox" value="poultry" {{ checked("agricultural-sector", "poultry") }}>
-                    <label class="govuk-label govuk-checkboxes__label" for="agricultural-sector-3">
+                  <div class="govuk-radios__item">
+                    <input class="govuk-radios__input" id="agricultural-sector-3" name="agricultural-sector" type="radio" value="poultry" {{ checked("agricultural-sector", "poultry") }}>
+                    <label class="govuk-label govuk-radios__label" for="agricultural-sector-3">
                       Poultry
                     </label>
                   </div>
 
-                  <div class="govuk-checkboxes__item">
-                    <input class="govuk-checkboxes__input" id="agricultural-sector-3" name="agricultural-sector" type="checkbox" value="sheep" {{ checked("agricultural-sector", "sheep") }}>
-                    <label class="govuk-label govuk-checkboxes__label" for="agricultural-sector-3">
+                  <div class="govuk-radios__item">
+                    <input class="govuk-radios__input" id="agricultural-sector-3" name="agricultural-sector" type="radio" value="sheep" {{ checked("agricultural-sector", "sheep") }}>
+                    <label class="govuk-label govuk-radios__label" for="agricultural-sector-3">
                       Sheep
                     </label>
                   </div>
                   
                   {% else%}                  
                      
-                  <div class="govuk-checkboxes__item">
-                    <input class="govuk-checkboxes__input" id="agricultural-sector-3" name="agricultural-sector" type="checkbox" value="non-dairy livestock" {{ checked("agricultural-sector", "non-dairy livestock") }}>
-                    <label class="govuk-label govuk-checkboxes__label" for="agricultural-sector-3">
+                  <div class="govuk-radios__item">
+                    <input class="govuk-radios__input" id="agricultural-sector-3" name="agricultural-sector" type="radio" value="non-dairy livestock" {{ checked("agricultural-sector", "non-dairy livestock") }}>
+                    <label class="govuk-label govuk-radios__label" for="agricultural-sector-3">
                       Non-dairy livestock
                     </label>
                   </div>   
@@ -166,3 +166,39 @@ Agricultural sector
   </div>
 
 {% endblock %}
+
+
+
+<div class="govuk-form-group">
+  <fieldset class="govuk-fieldset">
+    <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+      
+    </legend>
+    <div class="govuk-radios" data-module="govuk-radios">
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="whereDoYouLive" name="whereDoYouLive" type="radio" value="england">
+        <label class="govuk-label govuk-radios__label" for="whereDoYouLive">
+          England
+        </label>
+      </div>
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="whereDoYouLive-2" name="whereDoYouLive" type="radio" value="scotland">
+        <label class="govuk-label govuk-radios__label" for="whereDoYouLive-2">
+          Scotland
+        </label>
+      </div>
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="whereDoYouLive-3" name="whereDoYouLive" type="radio" value="wales">
+        <label class="govuk-label govuk-radios__label" for="whereDoYouLive-3">
+          Wales
+        </label>
+      </div>
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="whereDoYouLive-4" name="whereDoYouLive" type="radio" value="northern-ireland">
+        <label class="govuk-label govuk-radios__label" for="whereDoYouLive-4">
+          Northern Ireland
+        </label>
+      </div>
+    </div>
+  </fieldset>
+</div>
