--- a/app/views/robotics/current/equipment-eligibility.html
+++ b/app/views/robotics/current/equipment-eligibility.html
@@ -56,7 +56,7 @@
                 <div class="govuk-checkboxes__item">
                   <input class="govuk-checkboxes__input" id="robotic-equipment-1" name="equipment-eligibility" type="checkbox" value="Sensing">
                   <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-1">
-                    Has a sensing system that can understand its envrionment
+                    Has a sensing system that can understand its environment
                   </label>
                 </div>
   
