--- a/app/views/robotics/current/equipment-type.html
+++ b/app/views/robotics/current/equipment-type.html
@@ -42,6 +42,8 @@
             </legend>        
 
             <p class="govuk-hint">There are 4 eligibility criteria for grant funding.</p>
+            <p class="govuk-hint">Eligible technology should:</p>
+            
             <ul class="govuk-list govuk-list--bullet govuk-hint">
               <li>have a sensing system and can understand its environment</li>
               <li>make decisions and plan</li>
