--- a/app/views/robotics/current/project-items-summary.html
+++ b/app/views/robotics/current/project-items-summary.html
@@ -100,9 +100,9 @@
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p>Automatic items must meet at least 2 criteria to be eligible for funding.</p>
+          <p>Automatic items must fit at least 2 criteria to be eligible for funding.</p>
 
-          <p>Robotic items must meet all 4 criteria to be eligible for funding.</p>
+          <p>Robotic items must fit all 4 criteria to be eligible for funding.</p>
 
       </div>
     </div>
