--- a/app/views/robotics/current/energy-source.html
+++ b/app/views/robotics/current/energy-source.html
@@ -30,29 +30,30 @@
                 What type of energy will you use?
               </h1>
             </legend>
-            <p class="govuk-hint">Technology powered by fossil fuels will only be funded where there is no commercially available electric or renewable energy alternative</p>       
-            <div class="govuk-radios" data-module="govuk-radios">
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="whereDoYouLive" name="energy-source" type="radio" value="mains electricity">
-                <label class="govuk-label govuk-radios__label" for="whereDoYouLive">
+            <p class="govuk-hint">Technology powered by fossil fuels will only be funded where there is no commercially available electric or renewable energy alternative</p> 
+            <p class="govuk-hint">Select up to 2 options</p>      
+            <div class="govuk-checkboxes" data-module="govuk-checkboxes">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="whereDoYouLive" name="energy-source" type="checkbox" value="mains electricity">
+                <label class="govuk-label govuk-checkboxes__label" for="whereDoYouLive">
                   Mains electricity
                 </label>
               </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="whereDoYouLive-2" name="energy-source" type="radio" value="renewable electricity generated on the farm">
-                <label class="govuk-label govuk-radios__label" for="whereDoYouLive-2">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="whereDoYouLive-2" name="energy-source" type="checkbox" value="renewable electricity generated on the farm">
+                <label class="govuk-label govuk-checkboxes__label" for="whereDoYouLive-2">
                   Renewable electricity generated on the farm
                 </label>
               </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="whereDoYouLive-3" name="energy-source" type="radio" value="biofuels">
-                <label class="govuk-label govuk-radios__label" for="whereDoYouLive-3">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="whereDoYouLive-3" name="energy-source" type="checkbox" value="biofuels">
+                <label class="govuk-label govuk-checkboxes__label" for="whereDoYouLive-3">
                   Biofuels
                 </label>
               </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="whereDoYouLive-4" name="energy-source" type="radio" value="fossil fuels">
-                <label class="govuk-label govuk-radios__label" for="whereDoYouLive-4">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="whereDoYouLive-4" name="energy-source" type="checkbox" value="fossil fuels">
+                <label class="govuk-label govuk-checkboxes__label" for="whereDoYouLive-4">
                   Fossil fuels
                 </label>
               </div>
