--- a/app/views/robotics/current/project-cost.html
+++ b/app/views/robotics/current/project-cost.html
@@ -46,15 +46,15 @@
         </div>
 
 
-        {% if data['other-robotic-item'] %}
+       
         <div class="govuk-warning-text">
           <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
           <strong class="govuk-warning-text__text">
             <span class="govuk-warning-text__assistive">Warning</span>
-            RPA will assess your other robotic technology and whether they can fund it. There’s no guarantee your item will be funded.
+            RPA will assess your technology and whether they can fund it. There’s no guarantee your technology will be funded.
           </strong>
         </div>
-        {% endif %}
+        
 
         <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
       </form>
@@ -65,7 +65,7 @@
       <div class="app-step-nav-related app-step-nav-related--singular">
         <h2 class="app-step-nav-related__heading">
 
-          <span class="app-step-nav-related__pretitle">Eligible items selected</span>
+          <span class="app-step-nav-related__pretitle">Your project items</span>
 
           </h2>
        
