--- a/app/views/robotics/current/technology-criteria-fail.html
+++ b/app/views/robotics/current/technology-criteria-fail.html
@@ -27,7 +27,7 @@
         You cannot apply for a grant from this scheme 
       </h1>
 
-      <p class="govuk-body">Automatic items must meet at least 2 criteria to be eligible for grant funding.</p>
+      <p class="govuk-body">Automatic technology must fit at least 2 criteria to be eligible for grant funding. </p>
 
       <br>
 
