--- a/app/views/robotics/current/legal-status.html
+++ b/app/views/robotics/current/legal-status.html
@@ -14,11 +14,7 @@
       html: 'This is not a full service. It is not production code and you might experience problems .'
   }) }}
 
-  {% if data['who-are-you'] === "farmer" %}
-  <a class="govuk-back-link" href="who-are-you">Back</a>
-  {% else %}
-  <a class="govuk-back-link" href="register">Back</a>
-  {% endif %}
+  <a class="govuk-back-link" href="javascript:window.history.back()">Back</a>
 
 {% endblock %}
 
