--- a/app/views/robotics/current/reference-number.html
+++ b/app/views/robotics/current/reference-number.html
@@ -36,7 +36,7 @@
       <p>You can check if you can apply for a grant for <a href="farming-type">robotic and automatic technology</a>. The minimum grant is £25,000 (40% of £62,500). The maximum grant amount for both projects together is £500,000. </p>
       {% else %}
       
-      <p>You can check if you can apply for a grant for <a href="farming-type">solar technology</a>. The minimum grant is £15,000 (25% of £60,000). The maximum grant amount for both projects together is £500,000.</p>
+      <p>You can check if you can apply for a grant for <a href="farming-type">solar project items</a>. The minimum grant is £15,000 (25% of £60,000). The maximum grant amount for both projects together is £500,000.</p>
 
       
       {% endif %}
