--- a/app/views/robotics/current/solar-technology.html
+++ b/app/views/robotics/current/solar-technology.html
@@ -32,7 +32,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                What solar technology does your project need?
+                What solar project items does your project need?
               </h1>
             </legend>
             <p class="govuk-hint">You can apply for grant funding to:</p>
