--- a/app/views/robotics/current/start.html
+++ b/app/views/robotics/current/start.html
@@ -49,13 +49,13 @@
 
         <p>You can apply for up to:</p>
           <ul class="govuk-list govuk-list--bullet">
-            <li>40% of estimated costs of robotic and automatic technology</li>
-            <li>25% of estimated costs of solar technology</li>            
+            <li>40% of estimated costs of farm productivity project items</li>
+            <li>25% of estimated costs of solar project items</li>            
           </ul>
 
-          <p>For robotic and automatic technology, the maximum grant you can claim is £500,000. The minimum grant is £25,000 (40% of £62,500).</p>
-          <p>For solar technology, the maximum grant you can claim is £100,000. The minimum grant is £15,000 (25% of £60,000). You can apply for grant funding to add technology (for example a battery) to a solar PV system you already have or to buy a new solar PV system.</p>
-          <p>If you want to apply for both robotic techology and solar PV system grant funding, you must submit 2 separate applications. The maximum grant amount for both projects together is £500,000.</p>
+          <p>For farm productivity project items, the maximum grant you can claim is £500,000. The minimum grant is £25,000 (40% of £62,500).</p>
+          <p>For solar project items, the maximum grant you can claim is £100,000. The minimum grant is £15,000 (25% of £60,000). You can apply for grant funding to add technology (for example a battery) to a solar PV system you already have or to buy a new solar PV system.</p>
+          <p>If you want to apply for both farm productivity and solar project grant funding, you must submit 2 separate applications. The maximum grant amount for both projects together is £500,000.</p>
 
       
           <div class="govuk-inset-text">
