--- a/app/views/robotics/current/technology-criteria-fail.html
+++ b/app/views/robotics/current/technology-criteria-fail.html
@@ -22,16 +22,42 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form id="mainForm" class="form" action="robotic-items" method="post">
+      
       <h1 class="govuk-heading-l">
-        You cannot apply for a grant from this scheme 
+        You cannot apply for grant funding for this item
       </h1>
 
       <p class="govuk-body">Automatic technology must fit at least 2 criteria to be eligible for grant funding. </p>
 
       <br>
 
-       <button class="govuk-button" data-module="govuk-button">Add another item</button>
+      {% if (data['add-item'] == "Yes") %}
+
+      <div class="govuk-button-group">
+
+        <form id="mainForm" class="form" action="project-items-summary" method="post">
+        <button class="govuk-button" data-module="govuk-button">          
+          Continue with eligible items
+        </button>
+        </form>
+
+        <form id="mainForm" class="form" action="robotic-items" method="post">
+        <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+          Add another item
+        </button>
+        </form>
+
+      </div>
+
+      {% else %}
+
+      <form id="mainForm" class="form" action="robotic-items" method="post">
+        <button class="govuk-button" data-module="govuk-button">Add another item</button>
+       </form>
+
+      {% endif %}
+
+      
 
        <p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments"  class="govuk-!-font-size-19">
           See other grants you may be eligible for
@@ -40,7 +66,6 @@
 
 
 
-      </form>
 
     </div>
   </div>
