--- a/app/views/robotics/current/grant.html
+++ b/app/views/robotics/current/grant.html
@@ -13,7 +13,7 @@ Potential grant funding
     },
       html: 'This is not a full service. It is not production code and you might experience problems  .'
   }) }}
-<a class="govuk-back-link" href="{{ backUrl }}">Back</a>
+  <a class="govuk-back-link" href="javascript:window.history.back()">Back</a>
 {% endblock %}
 
 {% block content %}
