--- a/app/views/robotics/current/project-impact.html
+++ b/app/views/robotics/current/project-impact.html
@@ -14,7 +14,7 @@ Will your project use data analytics to improve productivity?
       html: 'This is not a full service. It is not production code and you might experience problems  .'
   }) }}
 
-  <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
+  <a class="govuk-back-link" href="javascript:window.history.back()">Back</a>
 {% endblock %}
 
 {% block content %}
