--- a/app/views/robotics/current/project-responsibility.html
+++ b/app/views/robotics/current/project-responsibility.html
@@ -13,7 +13,7 @@ Will you take full responsibility for your project?
     },
       html: 'This is not a full service. It is not production code and you might experience problems  .'
   }) }}
-  <a class="govuk-back-link" href="{{ backUrl}}">Back</a>
+  <a class="govuk-back-link" href="javascript:window.history.back()">Back</a>
 {% endblock %}
 
 {% block content %}
