--- a/app/views/robotics/current/robotic-items.html
+++ b/app/views/robotics/current/robotic-items.html
@@ -63,11 +63,15 @@
               </div>
 
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="robotic-equipment-1" name="robotic-equipment" type="radio" value="Driverless tractor or platform">
+                <input class="govuk-radios__input" id="robotic-equipment-1" name="robotic-equipment" type="radio" value="Driverless robotic tractor or platform">
                 <label class="govuk-label govuk-radios__label" for="robotic-equipment">
-                  Driverless tractor or platform
+                  Driverless robotic tractor or platform
                 </label>
               </div>
+
+              {% if (data['who-are-you'] == "contractor")  %}
+
+              {% else %}
 
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="robotic-equipment-1" name="robotic-equipment" type="radio" value="Voluntary robotic milking system">
@@ -86,17 +90,19 @@
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="robotic-equipment-1" name="robotic-equipment" type="radio" value="Transplanting technology">
                 <label class="govuk-label govuk-radios__label" for="robotic-equipment">
-                  Transplanting
+                  Transplanting technology
                 </label>
               </div>
 
 
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="robotic-equipment-1" name="robotic-equipment" type="radio" value="Slurry and manure management technology">
+                <input class="govuk-radios__input" id="robotic-equipment-1" name="robotic-equipment" type="radio" value="Slurry robots">
                 <label class="govuk-label govuk-radios__label" for="robotic-equipment">
-                  Slurry and manure management
+                  Slurry robots
                 </label>
               </div>
+
+              {% endif %}
 
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="robotic-equipment-1" name="robotic-equipment" type="radio" value="Other technology">
