--- a/app/views/robotics/current/solar-remaining-costs.html
+++ b/app/views/robotics/current/solar-remaining-costs.html
@@ -23,10 +23,10 @@ Meeting the remaining project costs
 
       <form id="mainForm" class="form" action="solar-remaining-costs-answer" method="post">
   {% set remainingCosts = data['solar-cost'] * 0.75 %}
-  {% set remainingCosts2 = data['solar-cost'] -500000 %}
+  {% set remainingCosts2 = data['solar-cost'] -100000 %}
 
 
-      <h1 class="govuk-heading-l">Can you pay the remaining costs{%if remainingCosts > 125001%} of £{{remainingCosts2 | toFixed(2) | commafy}}  {% else%} £{{ remainingCosts | toFixed(2) | commafy }}{% endif%}?</h1>
+      <h1 class="govuk-heading-l">Can you pay the remaining costs{% if (remainingCosts >= "125001")%} of £{{remainingCosts2 | toFixed(2) | commafy}}  {% else%} £{{ remainingCosts | toFixed(2) | commafy }}{% endif%}?</h1>
 
 
   <div class="govuk-radios govuk-radios--inline">
