--- a/app/views/robotics/current/potential-grant.html
+++ b/app/views/robotics/current/potential-grant.html
@@ -28,7 +28,7 @@ Potential grant funding
     {% set grantAmount = data['solar-cost'] *0.25 %}
     {% set projectCost = data['solar-cost'] %}
 
-      {% if (data['solar-cost'] >= "4000001") %}
+      {% if (data['solar-cost'] >= 400001) %}
       <p class="govuk-body">You may be able to apply for a grant of up to £100,000, based on the estimated cost of £{{ data['solar-cost'] | toFixed(2) | commafy }}.</p>
 
       {% else %}
